<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.MatchingGame.MainActivity">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/newgame"
        android:icon="@drawable/ic_baseline_replay_24"
        android:title="@string/new_game"
        android:onClick="startNewGame"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/about"
        android:title="@string/about_"
        app:showAsAction="never"/>


    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info_"
        app:showAsAction="ifRoom|withText"/>

</menu>